# critters

./: .gitignore  .tailor.yml  Cargo.toml  README.md  SECURITY.md  flake.nix  justfile
.github/: dependabot.yml
.github/workflows/: builder.yml  ci.yml  release.yml
crates/critters-core/: Cargo.toml
crates/critters-core/src/: lib.rs  rules.rs  scanner.rs
crates/critters-lsp/: Cargo.toml
crates/critters-lsp/src/: main.rs
crates/critters-lsp/tests/: protocol.rs
crates/critters-lsp/tests/support/: lsp.rs
docs/: configuration.md  limitations.md  parity-matrix.md
editors/zed/: Cargo.toml  extension.toml
editors/zed/src/: lib.rs
server/: Cargo.toml
server/src/: config.rs  main.rs  rules.rs  scanner.rs
src/: lib.rs
