[workspace]
members = ["server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.20.0"

[package]
name = "critters_zed"
version = "0.1.0"
edition = "2021"
publish = false
license = "BlueOak-1.0.0"
repository = "https://github.com/wimpysworld/critters"
description = "Critters Zed extension"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
