[workspace]
members = [
    "crates/critters-core",
    "crates/critters-lsp",
    "editors/zed",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
lsp-types = "0.94.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.20.0"
zed_extension_api = "0.7.0"
