[package]
name = "critters-lsp"
version = "0.1.0"
edition = "2021"
publish = false
license = "BlueOak-1.0.0"
repository = "https://github.com/wimpysworld/critters"
description = "Language server for Critters, a gremlins-style Unicode checker"

[[bin]]
name = "critters-lsp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
critters-core = { path = "../critters-core" }
tokio.workspace = true
tower-lsp.workspace = true
