[package]
name = "critters-zed"
version = "0.1.0"
edition = "2021"
publish = false
license = "BlueOak-1.0.0"
repository = "https://github.com/wimpysworld/critters"
description = "Critters Zed extension"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api.workspace = true
